# crewAI_flows

./: 1_basic_flows.py  2_unstructuredFlow.py  3_structuredFlow.py  README.md  requirements.txt
4_conditional_flows/: 1_or_flow.py  2_and_flow.py  3_router_flow.py
5_flows_and_crews/demo_flow/: README.md  pyproject.toml
5_flows_and_crews/demo_flow/src/demo_flow/: main.py
