[project]
name = "demo_flow"
version = "0.1.0"
description = "demo-flow using crewAI"
authors = [{ name = "L A V Ramanuja", email = "ramanujalakkimsetti@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
]

[project.scripts]
kickoff = "demo_flow.main:kickoff"
run_crew = "demo_flow.main:kickoff"
plot = "demo_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
